Transform to table structure. Please have a look at CONTRIBUTING.md